# driveguard

./: .gitignore  Cargo.toml  LICENSE.md  README.md
driveguard/: cargo.toml  readme.md
driveguard/assets/locales/: en.json  uk.json
driveguard/src/: backup.rs  config.rs  countdown_window.rs  drive_monitor.rs  localization.rs  main.rs  ui.rs  update_checker.rs  update_notification.rs  version.rs
shared/: cargo.toml
shared/src/: lib.rs  manifest.rs
updater/: cargo.toml
updater/src/: main.rs
